--- a/app/views/showvocabulary.html
+++ b/app/views/showvocabulary.html
@@ -1,4 +1,5 @@
 <h1>Vocabulary</h1>
+<h2>Load / Update vocabulary</h2>
 Current state:
 <textarea rows="5">{{showVocabularyCtrl.entries | json}}</textarea>
 
@@ -8,7 +9,27 @@ Insert new state here:
 <br/>
 <br/>
 
+
+<h2>Search entries</h2> (total number of entries: {{showVocabularyCtrl.totalNumberOfEntries}})
+<br/><br/>
+<form class="form-horizontal" novalidate>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Search word</label>
+        <div class="col-sm-4">
+            <input type="text" class="form-control" ng-model="showVocabularyCtrl.searchValues.searchString" />
+        </div>
+        <label class="col-sm-4 control-label">Incomplete entries only</label>
+        <div class="col-sm-1">
+            <input type="checkbox" ng-model="showVocabularyCtrl.searchValues.incompleteEntriesOnly"
+                    ng-change="showVocabularyCtrl.loadEntries()"/>
+        </div>
+    </div>
+</form>
+
 <ul>
-    <li ng-repeat="entry in showVocabularyCtrl.entries">{{entry.word}} = {{entry.translation}}</li>
+    <li ng-repeat="entry in showVocabularyCtrl.entries | orderBy:'word' | filter : showVocabularyCtrl.filterEntries">
+        <span class="badge">{{entry.level}}</span> {{entry.word}} = {{entry.translation}}
+        <button class="btn btn-sm btn-default" ng-click="showVocabularyCtrl.editEntry(entry.id);">edit</button>
+    </li>
 </ul>
 
