--- a/app/views/learnvocabulary.html
+++ b/app/views/learnvocabulary.html
@@ -14,9 +14,9 @@
         <label class="col-sm-2 control-label">Direction</label>
 
         <div class="col-sm-10">
-            <input type="radio" ng-model="learnVocabularyCtrl.direction" ng-value="true" id="directiontrue"> <label
+            <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="true" id="directiontrue"> <label
                 for="directiontrue">Dutch -> German</label><br/>
-            <input type="radio" ng-model="learnVocabularyCtrl.direction" ng-value="false" id="directionfalse"> <label
+            <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="false" id="directionfalse"> <label
                 for="directionfalse">German -> Dutch</label>
         </div>
     </div>
@@ -24,7 +24,7 @@
         <label class="col-sm-2 control-label">Levels</label>
 
         <div class="col-sm-10">
-            <input class="form-control" type="text" ng-model="learnVocabularyCtrl.levelsToLearn">
+            <input class="form-control" type="text" ng-model="learnVocabularyCtrl.learnSettings.levelsToLearn">
         </div>
     </div>
 </form>
@@ -32,7 +32,7 @@
 <p class="lead">Please translate the following word:</p>
 <alert type="info">
     Word: <strong>{{learnVocabularyCtrl.getQuestion()}}</strong><br/>
-    Level: {{learnVocabularyCtrl.currentEntry.level}}
+    Level: {{learnVocabularyCtrl.learnSettings.currentEntry.level}}
 </alert>
 
 <form name="learnform" class="form-horizontal"
