--- a/app/views/editentry.html
+++ b/app/views/editentry.html
@@ -9,7 +9,8 @@
         <label class="col-sm-2 control-label" for="word">Dutch</label>
 
         <div class="col-sm-10">
-            <input class="form-control" type="text" id="word"
+            <input mf-auto-focus
+                   class="form-control" type="text" id="word"
                    ng-model="editEntryCtrl.entry.word"
                    ng-required="true">
         </div>
@@ -27,7 +28,8 @@
     <div class="row">
         <div class="col-sm-12 col-sm-offset-11">
             <button class="btn btn-default" type="button"
-                    ng-click="editEntryCtrl.back()">Back</button>
+                    ng-click="editEntryCtrl.back()">Back
+            </button>
             <button class="btn btn-success" type="submit"
                     ng-disabled="editentryform.$invalid">Update
             </button>
