--- a/app/views/enternewword.html
+++ b/app/views/enternewword.html
@@ -9,7 +9,8 @@
         <label class="col-sm-2 control-label" for="word">Dutch</label>
 
         <div class="col-sm-10">
-            <input class="form-control" type="text" id="word"
+            <input mf-auto-focus
+                   class="form-control" type="text" id="word"
                    ng-model="enterNewWordCtrl.entry.word"
                    ng-required="true">
         </div>
@@ -20,7 +21,7 @@
 
         <div class="col-sm-10">
             <input class="form-control" type="text" id="translation"
-                   ng-model="enterNewWordCtrl.entry.translation" >
+                   ng-model="enterNewWordCtrl.entry.translation">
         </div>
     </div>
 
