--- a/app/views/showvocabulary.html
+++ b/app/views/showvocabulary.html
@@ -4,7 +4,9 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Search word</label>
         <div class="col-sm-4">
-            <input type="text" class="form-control" ng-model="showVocabularyCtrl.searchValues.searchString" />
+            <input type="text" class="form-control"
+                   mf-auto-focus
+                   ng-model="showVocabularyCtrl.searchValues.searchString" />
         </div>
         <label class="col-sm-4 control-label">Incomplete entries only</label>
         <div class="col-sm-1">
