--- a/app/views/editentry.html
+++ b/app/views/editentry.html
@@ -6,7 +6,7 @@
       novalidate>
 
     <div class="form-group">
-        <label class="col-sm-2 control-label" for="word">Dutch</label>
+        <label class="col-sm-2 control-label" for="word">{{editEntryCtrl.getLanguageName(editEntryCtrl.entry.language)}}</label>
 
         <div class="col-sm-10">
             <input mf-auto-focus
