--- a/app/views/enternewword.html
+++ b/app/views/enternewword.html
@@ -6,7 +6,7 @@
       novalidate>
 
     <div class="form-group">
-        <label class="col-sm-2 control-label" for="word">Dutch</label>
+        <label class="col-sm-2 control-label" for="word">{{enterNewWordCtrl.getLanguageName(enterNewWordCtrl.selectedLanguageKey)}}</label>
 
         <div class="col-sm-10">
             <input mf-auto-focus
@@ -22,6 +22,18 @@
         <div class="col-sm-10">
             <input class="form-control" type="text" id="translation"
                    ng-model="enterNewWordCtrl.entry.translation">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Language</label>
+        <div class="col-sm-10">
+            <div ng-repeat="currentLanguageKey in enterNewWordCtrl.languageKeys">
+                <input type="radio" name="language" id="language_{{currentLanguageKey}}"
+                       ng-model="enterNewWordCtrl.selectedLanguageKey"
+                       value="{{currentLanguageKey}}"/>
+                <label for="language_{{currentLanguageKey}}">{{enterNewWordCtrl.getLanguageName(currentLanguageKey)}}</label>
+            </div>
         </div>
     </div>
 
