--- a/app/views/learnvocabulary.html
+++ b/app/views/learnvocabulary.html
@@ -11,18 +11,31 @@
 </alert>
 
 <form class="form-horizontal" name="configform" novalidate>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Language</label>
+        <div class="col-sm-10">
+            <div ng-repeat="currentLanguageKey in learnVocabularyCtrl.learnSettings.languageKeys">
+                <input type="radio" name="language" id="language_{{currentLanguageKey}}"
+                       ng-model="learnVocabularyCtrl.learnSettings.selectedLanguageKey"
+                       value="{{currentLanguageKey}}" />
+                <label for="language_{{currentLanguageKey}}">{{learnVocabularyCtrl.learnSettings.getLanguageName(currentLanguageKey)}}</label>
+            </div>
+        </div>
+    </div>
+
     <div class="form-group">
         <label class="col-sm-2 control-label">Direction</label>
-
         <div class="col-sm-10">
             <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="true"
                    id="directiontrue"> <label
-                for="directiontrue">Dutch -> German</label><br/>
+                for="directiontrue">{{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}} -> German</label><br/>
             <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="false"
                    id="directionfalse"> <label
-                for="directionfalse">German -> Dutch</label>
+                for="directionfalse">German -> {{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}}</label>
         </div>
     </div>
+
     <div class="form-group">
         <label class="col-sm-2 control-label">Levels</label>
 
