--- a/app/views/learnvocabulary.html
+++ b/app/views/learnvocabulary.html
@@ -14,11 +14,12 @@
 
     <div class="form-group">
         <label class="col-sm-2 control-label">Language</label>
+
         <div class="col-sm-10">
             <div ng-repeat="currentLanguageKey in learnVocabularyCtrl.learnSettings.languageKeys">
                 <input type="radio" name="language" id="language_{{currentLanguageKey}}"
                        ng-model="learnVocabularyCtrl.learnSettings.selectedLanguageKey"
-                       value="{{currentLanguageKey}}" />
+                       value="{{currentLanguageKey}}"/>
                 <label for="language_{{currentLanguageKey}}">{{learnVocabularyCtrl.learnSettings.getLanguageName(currentLanguageKey)}}</label>
             </div>
         </div>
@@ -26,13 +27,16 @@
 
     <div class="form-group">
         <label class="col-sm-2 control-label">Direction</label>
+
         <div class="col-sm-10">
             <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="true"
                    id="directiontrue"> <label
-                for="directiontrue">{{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}} -> German</label><br/>
+                for="directiontrue">{{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}}
+            -> German</label><br/>
             <input type="radio" ng-model="learnVocabularyCtrl.learnSettings.direction" ng-value="false"
                    id="directionfalse"> <label
-                for="directionfalse">German -> {{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}}</label>
+                for="directionfalse">German ->
+            {{learnVocabularyCtrl.learnSettings.getLanguageName(learnVocabularyCtrl.learnSettings.selectedLanguageKey)}}</label>
         </div>
     </div>
 
@@ -40,7 +44,12 @@
         <label class="col-sm-2 control-label">Levels</label>
 
         <div class="col-sm-10">
-            <input class="form-control" type="text" ng-model="learnVocabularyCtrl.learnSettings.levelsToLearn">
+            <span ng-repeat="level in [1,2,3,4,5]">
+                <label for="level_{{level}}"> {{level}}</label>
+                <input type="checkbox" name="levels" id="level_{{level}}"
+                       ng-model="learnVocabularyCtrl.learnSettings.levelsToLearn[level]"
+                       value="{{level}}">
+            </span>
         </div>
     </div>
 </form>
