--- a/app/views/learnvocabulary.html
+++ b/app/views/learnvocabulary.html
@@ -1,16 +1,9 @@
 <h2>Learning</h2>
-
-<alert ng-show="learnVocabularyCtrl.notification.visible"
-       type="{{learnVocabularyCtrl.notification.success ? 'success' : 'danger'}}">
-    {{learnVocabularyCtrl.notification.success ? 'Correct!' : 'Incorrect!'}}
-    <strong><a href="" ng-click="learnVocabularyCtrl.editPreviousEntry()">{{learnVocabularyCtrl.notification.text}}</a></strong>
-    <button ng-hide="learnVocabularyCtrl.notification.success"
-            class="btn btn-warning navbar-right"
-            ng-click="learnVocabularyCtrl.upvotePreviousEntry()">I knew that!
-    </button>
-</alert>
-
-<form class="form-horizontal" name="configform" novalidate>
+<p class="lead" ng-click="learnVocabularyCtrl.learnSettingsVisible = !learnVocabularyCtrl.learnSettingsVisible">
+    Learning settings
+    <span class="glyphicon glyphicon-menu-{{learnVocabularyCtrl.learnSettingsVisible ? 'down' : 'left'}}"></span>
+</p>
+<form ng-show="learnVocabularyCtrl.learnSettingsVisible" class="form-horizontal" name="configform" novalidate>
 
     <div class="form-group">
         <label class="col-sm-2 control-label">Language</label>
@@ -53,6 +46,16 @@
         </div>
     </div>
 </form>
+
+<alert ng-show="learnVocabularyCtrl.notification.visible"
+       type="{{learnVocabularyCtrl.notification.success ? 'success' : 'danger'}}">
+    {{learnVocabularyCtrl.notification.success ? 'Correct!' : 'Incorrect!'}}
+    <strong><a href="" ng-click="learnVocabularyCtrl.editPreviousEntry()">{{learnVocabularyCtrl.notification.text}}</a></strong>
+    <button ng-hide="learnVocabularyCtrl.notification.success"
+            class="btn btn-warning navbar-right"
+            ng-click="learnVocabularyCtrl.upvotePreviousEntry()">I knew that!
+    </button>
+</alert>
 
 <p class="lead">Please translate the following word:</p>
 <alert type="info">
