--- a/app/views/enternewword.html
+++ b/app/views/enternewword.html
@@ -6,7 +6,7 @@
       novalidate>
 
     <div class="form-group">
-        <label class="col-sm-2 control-label" for="word">{{enterNewWordCtrl.getLanguageName(enterNewWordCtrl.selectedLanguageKey)}}</label>
+        <label class="col-sm-2 control-label" for="word">{{enterNewWordCtrl.getLanguageName(enterNewWordCtrl.enterNewWordSettings.selectedLanguageKey)}}</label>
 
         <div class="col-sm-10">
             <input mf-auto-focus
@@ -30,7 +30,7 @@
         <div class="col-sm-10">
             <div ng-repeat="currentLanguageKey in enterNewWordCtrl.languageKeys">
                 <input type="radio" name="language" id="language_{{currentLanguageKey}}"
-                       ng-model="enterNewWordCtrl.selectedLanguageKey"
+                       ng-model="enterNewWordCtrl.enterNewWordSettings.selectedLanguageKey"
                        value="{{currentLanguageKey}}"/>
                 <label for="language_{{currentLanguageKey}}">{{enterNewWordCtrl.getLanguageName(currentLanguageKey)}}</label>
             </div>
